--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frantic",
-  "description": "Information for the Frantic Discord Server",
+  "description": "This is where all the information is held for the Frantic Discord server.",
   "version": "1.0.0",
   "author": {
     "name": "Aceheliflyer",
@@ -9,7 +9,9 @@
   },
   "license": "UNLICENSED",
   "main": "N/A",
-  "scripts": {},
+  "scripts": {
+    "lint": "standard *.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Aceheliflyer/Frantic.git"
@@ -26,7 +28,8 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "common-tags": "^1.8.0",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
     "eslint-plugin-typescript": "^0.13.0",
