--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "UNLICENSED",
   "main": "N/A",
   "scripts": {
-    "lint": "standard *.ts"
+    "lint:js": "standard --verbose | snazzy",
+    "lint:js-fix": "standard --verbose --fix | snazzy"
   },
   "repository": {
     "type": "git",
@@ -27,20 +28,12 @@
   "homepage": "https://github.com/Aceheliflyer/Frantic#readme",
   "dependencies": {
     "chalk": "^2.4.1",
+    "cli-progress": "^2.1.0",
     "common-tags": "^1.8.0",
-    "moment": "^2.22.2",
-    "typescript": "^3.1.6"
+    "moment": "^2.22.2"
   },
   "devDependencies": {
-    "eslint-plugin-typescript": "^0.13.0",
     "snazzy": "^8.0.0",
-    "standard": "^12.0.1",
-    "typescript-eslint-parser": "^20.1.1"
-  },
-  "standard": {
-    "parser": "typescript-eslint-parser",
-    "plugins": [
-      "typescript"
-    ]
+    "standard": "^12.0.1"
   }
 }
